--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -37,11 +37,16 @@ jobs:
           
           name: JS Actions
 
+
 on: [push]
 
 jobs:
   action:
+
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+    - uses: actions/checkout@v1
+
+    - name: hello-action
+      uses: ./.github/actions/hello-world
